# UIPathAPI

./: .gitignore  BuildInstructions.md  README.md  generatecode.sh  pyproject.toml  setup.py
UIPathAPI/: __init__.py  api_client.py  configuration.py  rest.py
codefixer/: generatecode.sh
docs/: AccountApi.md  AlertsApi.md  AppTasksApi.md  AppTasksCreateRequest.md  AppTasksDataDto.md  AssetsApi.md  AssetsGetRobotByNameAndKeyRequest.md  AuditLogsApi.md  BlobFileAccessDto.md  BucketsApi.md  BuildTestSetRequestMessage.md  CalendarsApi.md  CredentialStoresApi.md  DirectoryServiceApi.md  EnvironmentsApi.md  ExecutionMediaApi.md  ExportsApi.md  ExtendedCalendarDto.md  FoldersApi.md  FoldersNavigationApi.md  FormTaskCreateRequest.md  GenericTasksApi.md  HostLicensesApi.md  JobDto.md  JobTriggerDto.md  JobTriggersApi.md  JobsApi.md  LibrariesApi.md  LicensesNamedUserApi.md  LicensesRuntimeApi.md  LicensingApi.md  LogDto.md  LogsApi.md  MachineSessionRuntimeDto.md  MachinesApi.md  MaintenanceApi.md  OrganizationUnitsApi.md  PackageDeletedEvent.md  PackageFeedsApi.md  PackageUploadedEvent.md  (+73 more)
test/: test_accessible_folders_dto.py  test_account_api.py  test_activity_settings_dto.py  test_add_queue_item_request.py  test_ajax_response.py  test_alert_dto.py  test_alerts_api.py  test_alerts_mark_as_read_request.py  test_app_tasks_api.py  test_app_tasks_create_request.py  test_app_tasks_data_dto.py  test_app_tasks_metadata_dto.py  test_argument_metadata.py  test_asset_created_event.py  test_asset_deleted_event.py  test_asset_dto.py  test_asset_folders_share_dto.py  test_assets_api.py  (+469 more)
(+491 files in other folders)
