[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uipath_orchestrator_rest"
version = "1.17.1"
description = "UiPath Orchestrator REST API Client 17.0"
authors = [
    { name = "Jorge Caravaca", email = "taruelec@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
"certifi >= 2024",
"python-dateutil >= 2.1",
"six >= 1.10",
"urllib3 >= 1.23",
]

[project.urls]
homepage = "https://github.com/TaruDesigns/UIPathAPI"